--- a/style.css
+++ b/style.css
@@ -20,7 +20,10 @@ div{
 }
 col-sm-6, col-sm-4, col-sm-8{
     margin:0px;
+    width:100%;
 }
+
+
 .logo_div{
     width: 50%;
 }
@@ -74,6 +77,7 @@ col-sm-6, col-sm-4, col-sm-8{
     height: auto;
     top:0;
     max-width: 980px;
+    z-index:999;
 }
 ul li {  
     display: inline-block;
@@ -230,6 +234,7 @@ input{
     z-index: 9999;
     border:rgb(219, 219, 219) 1px solid;
     width: 100%;
+    position: absolute;
 }
 #blink{
     width: 6px;
@@ -261,6 +266,7 @@ iframe{
 }
 .ad{
     font-size: small;
+    padding:4px;
 }
 
 /*.ad_top{
@@ -288,10 +294,9 @@ iframe{
     border-top: 1px solid lightslategray;
     border-bottom: 1px solid lightgray;
     padding:8px;
-    margin-bottom:6px;
+    margin-bottom:5px;
     float: left;
     height:auto;
-
 }
 .article_content h1{
     font-size: 18px;
@@ -360,12 +365,14 @@ li a.menu_title{
     height:100%;
     padding-top:5px;
 }
-.pubblicità, .articoli{
+.articoli{
     padding-top: 5px;
 }
+.pubblicità{
+    padding-top: 10px;
+}
 
-
-/*EDITORIALE*/
+    /*EDITORIALE*/
 #editoriale section{
     background-color: #c9c8c8;
     padding: 6px;
